# Sandboxx

./: .gitignore  README.md
SDLTest/: CMakeLists.txt  entity.c  entity.h  frontend.h  game.c  game.h  main.c  map.c  map.h  map_text_file.c  map_text_file.h  minmax.h  sdl_frontend.c  sdl_frontend.h  tile_grid.c  tile_grid.h  vector2f.c  vector2i.h  world.c  world.h  world.txt  world_text_file.c  world_text_file.h
SDLTest/data/: appearances.txt
SDLTest/src/: CMakeLists.txt  entity.c  game.h  world_text_file.c
SDLTest/src/base/: CMakeLists.txt  adventure_state.c  adventure_state.h  entity.c  entity.h  game.c  game.h  ptr_vector.c  ptr_vector.h  tile_grid.c  vector.c  vector.h  vector2i.c  vector2i.h  world.c  world.h  world_text_file.c
SDLTest/src/game/: CMakeLists.txt  main.c
SDLTest/src/sdl_frontend/: CMakeLists.txt  adventure_state_view.c  adventure_state_view.h  appearance.c  appearance.h  avatar_controller.c  avatar_controller.h  camera.c  camera.h  data.c  data.h  game_state_view.h  image_manager.c  image_manager.h  sdl_frontend.c  sdl_frontend.h  texture_ref.c  texture_ref.h
WaffleDB/: nbactions.xml  pom.xml
asio-ssl/: CMakeLists.txt  server.cpp
binary_io/: CMakeLists.txt
bootloader/: build.sh  main.asm  main.img
c_containers/: CMakeLists.txt  hash_map.c  hash_map.h  hash_set.c  hash_set.h  linked_list.c  linked_list.h  main.c  queue.c  queue.h  stack.c  stack.h  tree_map.c  tree_map.h  vector.c  vector.h
c_wrapper/: CMakeLists.txt  main.c  map.cpp  map.h
constexpr/: build-run.sh  sql.cpp
dungeons/src/: CMakeLists.txt
dungeons/src/client/: CMakeLists.txt  client.cpp  client.hpp  game.cpp  game.hpp  main.cpp  menu_screen.cpp  menu_screen.hpp  screen.cpp  screen.hpp  view.cpp  view.hpp
dungeons/src/client_logic/: CMakeLists.txt  world.cpp  world.hpp
dungeons/src/sdl_display/: CMakeLists.txt  camera.cpp  camera.hpp  menu_screen.cpp  menu_screen.hpp  resources.cpp  resources.hpp  screen.cpp  screen.hpp  view.cpp  view.hpp  world_screen.cpp  world_screen.hpp  world_tile_set.cpp  world_tile_set.hpp
dungeons/src/sdlpp/: CMakeLists.txt  sdlpp.cpp  sdlpp.hpp
dungeons/src/server/: CMakeLists.txt  server.cpp  server.hpp
dungeons/src/shared/: CMakeLists.txt  shared.cpp  shared.hpp
endianness/: main.cpp
finddiff/: CMakeLists.txt  finddiff.c
function/: CMakeLists.txt  function.hpp  main.cpp
function2/: CMakeLists.txt  function.hpp  function2.hpp  test.cpp
gtkmmtest/: gtkmmtest.sln  gtkmmtest.vcxproj  main.cpp
hash_map/: CMakeLists.txt  hash_map.c  hash_map.h  main.c
htonl/: Makefile  main.cpp
include_guard_gen/: CMakeLists.txt  main.cpp
mmap/: CMakeLists.txt  main.c
new-language/: array.cs  bigendian.cs  brainfuck.cs  branches.cs  chat.cs  chat2.cs  fileserver.cs  helloworld.cs  helloworld2.cs  helloworld3.cs  helloworld4.cs  lexer.cs  map-v2.cs  map-v3.cs  map.cs  mutable.cs  tcpecho.cs  template.cs  variant.cs
new-language/parser/: CMakeLists.txt  analyze.hpp  ast.hpp  interpreter.hpp  parser.cpp  parser.hpp  scanner.hpp  test.cpp
new-language/parser/ast/: ast.hpp  print_expression.hpp
new-language/parser/interpreter/: interpreter.hpp  prepare.hpp
new-language/parser/semantic/: analyze.hpp  program.hpp
nofs/: command-line-ideas.txt  content-server.txt  gateway-server.txt  index-server.txt  logic-server.txt  nofs.cpp  use-cases.txt
oop/: CMakeLists.txt  main.c
pi/: b2.sh  user-config.jam
protocol/: main.cpp
protolang0/: .gitignore  CMakeLists.txt  test.p0  test.p0i
ptr_script/: CMakeLists.txt
signals/: CMakeLists.txt  connection.c  connection.h  main.c  signal.c  signal.h  types.h
skyfall/: CMakeLists.txt  main.cpp
sleep/: sleep.cpp
solutions/: erase_remove.cpp  is_callable.cpp  linear_queue.cpp  string_ref.cpp  vector.cpp  vector_ctors.cpp
sort/: CMakeLists.txt  main.cpp
state-machine/: CMakeLists.txt  state_machine.hpp  test.cpp
streamcopy/: CMakeLists.txt  main.cpp
taac/: .project  TODO.txt  test.asm
tutorial_compiler/: CMakeLists.txt  compiler.cpp
vector_vs_list/: CMakeLists.txt  vector_vs_list.cpp
vier_gewinnt/: CMakeLists.txt  console.cpp  (+2 more)
webserver/: CMakeLists.txt  buffer.c  buffer.h  directory.c  directory.h  fs_directory.c  fs_directory.h  http_request.c  http_request.h  http_response.c  http_response.h  load_directory.c  load_directory.h  load_file.c  load_file.h  lua_request_handler.c  lua_request_handler.h  lua_script.c  lua_script.h  main.c  request_handler.h  socket.c  socket.h  thread.c  thread.h
webserver/common/: buffer.c  buffer.h  directory.h  function.c  function.h  ifstream.c  imstream.c  istream.c  istream.h  load_file.c  path.c
webserver/config/: directory.txt  index.lua  settings.txt
webserver/file_system/: fs_directory.c  fs_directory.h
webserver/http/: directory.c  directory.h  http_response.h  load_directory.c  load_directory.h
webserver/lua/: CMakeLists.txt
webserver/lua_script/: lua_script.c  lua_script.h
webserver/src/: CMakeLists.txt
webserver/src/common/: config.h  generic_vector.h  ifstream.c  imstream.c  istream.c  istream.h  path.c  path.h  socket.c  socket.h  string.c  string.h  string_util.c  string_util.h  thread.c
webserver/src/empty_plugin/: empty.c
webserver/src/file_system/: fs_directory.c  fs_directory.h
webserver/src/http/: directory.c  directory.h  http_request.c  http_request.h  http_response.c  http_response.h  load_directory.c  load_directory.h  parse_request.c  parse_request.h
webserver/src/lua_script/: lua_script.c  lua_script.h
webserver/src/sub_directory/: sub_directory.c  sub_directory.h
webserver/src/test/: buffer.c  buffer.h  config.c  generic_vector.c  generic_vector.h  main.c  path.c  path.h  string.c  string.h
webserver/src/webserver/: CMakeLists.txt  client.c  client.h  dynamic_library.c  dynamic_library.h  log.c  log.h  main.c  node_plugin.c  node_plugin.h  server.c  server.h  settings.c  settings.h
webserver/sub_directory/: sub_directory.c  sub_directory.h
webserver/test/: CMakeLists.txt  buffer.c  main.c  path.c
webserver/webserver/: CMakeLists.txt  load_directory.c  load_directory.h  main.c
(+299 files in other folders)
